objects/APTS_NACI_Form_Variables__mdt.object
<CustomObject>
    <description>DOC 9821</description>
    <fields>
        <fullName>Annual_Price__c</fullName>
        <label>Annual / One Time Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <label>Currency Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>NACI Form Variables</label>
    <pluralLabel>NACI Form Variables</pluralLabel>
</CustomObject>